--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,6 +1,6 @@
 .board {
   display: grid;
-  grid-template-columns: repeat(6, 1fr) 30px repeat(6, 1fr); /* 13 columns: 6 + bar + 6 */
+  grid-template-columns: repeat(6, 1fr) 40px repeat(6, 1fr); /* 13 columns: 6 + bar + 6 */
   grid-template-rows: 1fr 1fr; /* top and bottom rows */
   background-color: #a3502aea;
   border: 20px solid #6d360f;
@@ -18,6 +18,7 @@
   grid-column: 7;
   grid-row: 1 / span 2;
   width: 100%;
+  align-content: center;
 }
 
 .arrow-up {
